--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,5 @@
 @import "blocks/features.less";
 @import "blocks/reviews.less";
 @import "blocks/rates.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
