stated styling catalog

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,5 @@
 @import "blocks/rates.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
+@import "blocks/inner-page-header.less";
+@import "blocks/catalog.less";
