--- a/source/css/style.css
+++ b/source/css/style.css
@@ -803,4 +803,131 @@ template {
   text-decoration: none;
   color: #283645;
 }
+.inner-page-header {
+  background-color: #000000;
+  background-image: url("/img/header-320.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 237px;
+}
+.inner-page-header__wrapper {
+  padding: 21px 20px 21px 20px;
+  height: 24px;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.inner-page-header__slogan {
+  margin: 36px 20px 0 20px;
+  color: #FFF;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 120%;
+  /* 28.8px */
+}
+.catalog__wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.catalog__slogan {
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 70px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: center;
+  color: #283645;
+}
+.catalog__list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.catalog__item {
+  position: relative;
+  background-color: #f2f2f2;
+  margin-bottom: 20px;
+}
+.catalog__photo--panorama {
+  margin-left: -20px;
+}
+.catalog__panorama-of-day::after {
+  content: "ПАНОРАМА ДНЯ";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 140px;
+  height: 36px;
+  background-color: #d22856;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.catalog__author-info {
+  display: flex;
+  align-items: center;
+  margin-top: 25px;
+  height: 10px;
+  gap: 3px;
+  padding-left: 17px;
+  padding-right: 10px;
+}
+.catalog__author {
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 700;
+  color: #283645;
+}
+.catalog__post-time {
+  font-size: 12px;
+  font-weight: 300;
+  color: #283645;
+  text-transform: uppercase;
+  margin: 0;
+}
+.catalog__post-text {
+  margin-top: 14px;
+  color: #283645;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  padding-left: 17px;
+  padding-right: 10px;
+  margin-bottom: 0;
+}
+.catalog__likes--liked {
+  margin-top: 15px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  color: #d22856;
+  font-size: 12px;
+  font-weight: 400;
+  background-color: transparent;
+  text-transform: uppercase;
+  height: 20px;
+  padding-left: 48px;
+  margin-bottom: 20px;
+}
+.catalog__likes--liked::before {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -31px;
+  width: 13px;
+  height: 12px;
+  background-image: url("/img/heart.svg");
+}
 /*# sourceMappingURL=style.css.map */
