--- a/source/css/style.css
+++ b/source/css/style.css
@@ -857,6 +857,11 @@ template {
   background-color: #f2f2f2;
   margin-bottom: 20px;
 }
+.catalog__item:last-of-type {
+  position: relative;
+  background-color: #f2f2f2;
+  margin-bottom: 0;
+}
 .catalog__photo--panorama {
   margin-left: -20px;
 }
@@ -929,5 +934,210 @@ template {
   width: 13px;
   height: 12px;
   background-image: url("/img/heart.svg");
+}
+.catalog__likes--unliked {
+  margin-top: 15px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  color: #d22856;
+  font-size: 12px;
+  font-weight: 400;
+  background-color: transparent;
+  text-transform: uppercase;
+  height: 20px;
+  padding-left: 48px;
+  margin-bottom: 20px;
+}
+.catalog__likes--unliked::before {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -31px;
+  width: 13px;
+  height: 12px;
+  background-image: url("/img/heart.svg");
+  opacity: 0.5;
+}
+.catalog__photo {
+  object-fit: cover;
+  object-position: center;
+}
+.make-post__wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #f2f2f2;
+}
+.make-post__slogan {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  color: #283645;
+  margin-top: 49px;
+  margin-bottom: 52px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.make-post__form {
+  padding-top: 20px;
+}
+.make-post__photo {
+  object-fit: cover;
+  object-position: center;
+}
+.make-post__controls {
+  margin-top: 42px;
+}
+.make-post__controls-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 35px;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+}
+.make-post__controls-item button {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+.make-post__controls-item svg {
+  fill: #283645;
+  opacity: 0.3;
+}
+.make-post__controls-item:active svg,
+.make-post__controls-item:focus svg {
+  fill: #d22856;
+  opacity: 1;
+}
+.make-post__sliders-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+.make-post__sliders-item {
+  height: 75px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.make-post__sliders-item::after {
+  content: "";
+  width: 320px;
+  height: 1px;
+  position: absolute;
+  background-color: #283645;
+  opacity: 0.1;
+  top: 75px;
+  left: -41px;
+}
+.make-post__slider-toggle {
+  width: 240px;
+  height: 2px;
+  border: none;
+  background-color: #283645;
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
+.make-post__slider-toggle::before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: -7px;
+  left: 193px;
+  background-color: #ffffff;
+  border: 2px solid #d22856;
+  border-radius: 100%;
+}
+.make-post__button--post {
+  margin-top: 38px;
+  margin-bottom: 12px;
+  border-color: #d22856;
+  color: #d22856;
+}
+.make-post__button--reset {
+  margin-bottom: 41px;
+  opacity: 0.1;
+}
+.competition-form__wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.competition-form__main-legend {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  color: #283645;
+  margin-top: 54px;
+  margin-bottom: 55px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.competition-form__user-info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 44px;
+}
+.competition-form__user-info label {
+  margin-left: 43px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  color: #d22856;
+  margin-bottom: 17px;
+  text-transform: uppercase;
+}
+.competition-form__user-info input {
+  width: 254px;
+  height: 59px;
+  margin-bottom: 29px;
+  margin-left: 20px;
+  padding-left: 22px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #283645;
+  border: 2px solid #e5e5e5;
+  border-radius: 1px;
+}
+.competition-form__achievments {
+  background-color: #f2f2f2;
+}
+.competition-form__user-achievments {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+.competition-form__achievments-title {
+  padding-top: 42px;
+  padding-left: 51px;
+  padding-right: 51px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #d22856;
+  margin-bottom: 44px;
+}
+.competition-form__achievments-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 69px;
+}
+.competition-form__achievments-item-control {
+  margin-left: 79px;
 }
 /*# sourceMappingURL=style.css.map */
