--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,3 +11,5 @@
 @import "blocks/page-footer.less";
 @import "blocks/inner-page-header.less";
 @import "blocks/catalog.less";
+@import "blocks/make-post.less";
+@import "blocks/competition-form.less";
