--- a/source/less/blocks/competition-form.less
+++ b/source/less/blocks/competition-form.less
@@ -21,7 +21,8 @@
   margin-bottom: 44px;
 }
 
-.competition-form__user-info label {
+.competition-form__user-info label,
+.competition-form__contacts label {
   margin-left: 43px;
   font-weight: 400;
   font-size: 14px;
@@ -31,7 +32,8 @@
   text-transform: uppercase;
 }
 
-.competition-form__user-info input {
+.competition-form__user-info input,
+.competition-form__contacts input {
   width: 254px;
   height: 59px;
   margin-bottom: 29px;
@@ -47,6 +49,7 @@
 
 .competition-form__achievments {
   background-color: #f2f2f2;
+  padding-bottom: 44px;
 }
 
 .competition-form__user-achievments {
@@ -78,4 +81,135 @@
 
 .competition-form__achievments-item-control {
   margin-left: 79px;
+  position: relative;
+}
+
+.competition-form__contacts {
+  padding: 42px 0 42px 0;
+}
+
+.competition-form__user-contacts {
+  margin: 0;
+  padding: 0;
+  border: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.competition-form__app {
+  background: #f2f2f2;
+  padding-top: 42px;
+  padding-bottom: 42px;
+}
+
+.competition-form__user-app {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.competition-form__app-platform {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #d22856;
+  display: block;
+  max-width: 180px;
+  margin-bottom: 40px;
+}
+
+.competition-form__app-list {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  margin-left: 90px;
+}
+
+.competition-form__app-item {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #283645;
+  margin-bottom: 38px;
+}
+
+.competition-form__app-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.competition-form__app-control {
+  position: relative;
+}
+
+.competition-form__emotions {
+  padding-top: 42px;
+}
+
+.competition-form__user-emotions {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.competition-form__emotions-title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #d22856;
+  display: block;
+  max-width: 185px;
+  margin-bottom: 40px;
+}
+
+.competition-form__emotions-textarea {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 22px;
+  display: block;
+  border: 2px solid #e5e5e5;
+  border-radius: 1px;
+  width: 232px;
+  height: 153px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #283645;
+}
+
+.competition-form__submit {
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.competition-form__submit-button {
+  border: 2px solid #2aab6d;
+  background-color: #2aab6d;
+  border-radius: 1px;
+  width: 276px;
+  height: 59px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.competition-form__rules {
+  text-align: center;
+  margin-top: 44px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #283645;
+  margin-bottom: 66px;
+}
+
+.competition-form__rules span {
+  color: #d22856;
 }
