--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,4 @@
 @import "blocks/catalog.less";
 @import "blocks/make-post.less";
 @import "blocks/competition-form.less";
+@import "page-modal.less";
