--- a/source/less/global.less
+++ b/source/less/global.less
@@ -54,3 +54,38 @@ html {
   background-color: #ffffff;
   outline: 3px solid #283645;
 }
+
+.control-mark {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+  border-radius: 1px;
+  top: -7px;
+  left: -55px;
+}
+
+.control-mark--radio {
+  position: absolute;
+  width: 37px;
+  height: 37px;
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+  border-radius: 100%;
+  top: -7px;
+  left: -55px;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark {
+  background-image: url("/img/check-mark.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.control-input[type="radio"]:checked + .control-mark--radio {
+  background-image: url("/img/radio-check-mark.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
